--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
     "react-native-elements": "^1.2.1",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-web": "^0.11.7",
-    "react-navigation": "^3.12.0"
+    "react-navigation": "^3.12.0",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-promise": "^0.6.0",
+    "redux-promise-middleware": "^6.1.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
