--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
-    "jest-expo": "^35.0.0"
+    "jest-expo": "^35.0.0",
+    "redux-logger": "^3.0.6"
   },
   "private": true
 }
