--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
     "jest-expo": "^35.0.0",
+    "prettier": "^1.18.2",
     "redux-logger": "^3.0.6"
   },
   "private": true
