--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
         "redux-promise": "^0.6.0",
         "redux-promise-middleware": "^6.1.1",
         "redux-thunk": "^2.3.0",
-        "expo-haptics": "~7.0.0"
+        "expo-haptics": "~7.0.0",
+        "expo-permissions": "~7.0.0"
     },
     "devDependencies": {
         "babel-preset-expo": "^7.0.0",
