--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
         "redux": "^4.0.4",
         "redux-promise": "^0.6.0",
         "redux-promise-middleware": "^6.1.1",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "react-native-svg": "~9.9.2"
     },
     "devDependencies": {
         "babel-preset-expo": "^7.0.0",
@@ -43,6 +44,7 @@
         "eslint-plugin-react": "^7.16.0",
         "jest-expo": "^35.0.0",
         "prettier": "^1.18.2",
+        "react-native-svg-transformer": "^0.14.3",
         "redux-logger": "^3.0.6"
     },
     "private": true
